# ks-aur-scanner

./: .gitignore  CHANGELOG.md  Cargo.toml  PKGBUILD  README.md
.github/: CODEOWNERS
aur/aur-scanner-git/: .SRCINFO  PKGBUILD
aur/aur-scanner-rc/: .SRCINFO  PKGBUILD
crates/aur-scanner-cli/src/: main.rs
crates/aur-scanner-cli/src/commands/: codes.rs  install.rs  scan.rs  system.rs
crates/aur-scanner-cli/tests/: evasion_fuzzer.rs
crates/aur-scanner-core/: Cargo.toml
crates/aur-scanner-core/src/: aur.rs  lib.rs  neturl.rs  textutil.rs  types.rs  validate.rs
crates/aur-scanner-core/src/analyzer/: binary.rs  checksum.rs  deep.rs  ioc.rs  metadata.rs  mod.rs  privilege.rs  remote_exec.rs  source.rs  threat_intel.rs
crates/aur-scanner-core/src/catalog/: mod.rs
crates/aur-scanner-core/src/parser/: mod.rs  static_parser.rs
crates/aur-scanner-core/src/rules/: mod.rs
crates/aur-scanner-core/src/threat_intel/: mod.rs  remote.rs
crates/aur-scanner-hook/src/: main.rs
crates/aur-scanner-plugin/: Cargo.toml
crates/aur-scanner-plugin/src/: lib.rs
docs/: THREAT-COVERAGE.md
docs/examples/dataset/: meta.txt  version.out
docs/examples/dataset/codes/: json.out  markdown.out  text.out
docs/examples/dataset/sbom/: clean-example-package.cdx.json  clean-example-package.sbom.txt
docs/examples/dataset/scan/clean-example-package/: fail-on-high.out  json.out  sarif.err  sarif.out
docs/examples/dataset/scan/clean-git-package/: json.out  sarif.err  sarif.out  text.out
docs/examples/dataset/scan/clean-legit-metadata/: fail-on-high.out  json.err  json.out  sarif.out
docs/examples/dataset/scan/malicious-atomic-arch/: fail-on-high.out  json.err  json.out  sarif.out
docs/examples/dataset/scan/malicious-chaos-rat/: fail-on-high.out  json.err  json.out  sarif.out
docs/examples/dataset/scan/malicious-credential-theft/: fail-on-high.out  json.err  json.out  sarif.err  sarif.out  text.out
docs/examples/dataset/scan/malicious-cryptominer/: fail-on-high.out  json.out  sarif.err  sarif.out  text.out
docs/examples/dataset/scan/malicious-curl-bash/: fail-on-high.out  json.err  json.out  sarif.err  sarif.out
docs/examples/dataset/scan/malicious-exfil-channels/: json.err  json.out  sarif.out  text.out
docs/examples/dataset/scan/malicious-launcher-shell/: fail-on-high.out  json.err  json.out  sarif.err  sarif.out  text.out
docs/examples/dataset/scan/malicious-obfuscated/: json.err  json.out  sarif.out  text.out
docs/examples/dataset/scan/malicious-obfuscated-install/: json.err  json.out  sarif.err  sarif.out  text.out
docs/examples/dataset/scan/malicious-reverse-shell/: fail-on-high.out  json.out  sarif.err  sarif.out  text.out
docs/examples/dataset/scan/malicious-reverse-shell-variants/: fail-on-high.out  json.out  sarif.err  sarif.out  text.out
docs/examples/dataset/scan/malicious-supplychain-metadata/: json.err  json.out  sarif.out  text.out
docs/examples/dataset/scan/malicious-trust-tamper/: json.out  sarif.err  sarif.out  text.out
docs/examples/dataset/scan/malicious-var-indirection/: fail-on-high.out  json.err  json.out  sarif.out  text.out
docs/examples/dataset/scan/malicious-xeactor-style/: fail-on-high.out  json.err  json.out  sarif.err  sarif.out
install/: aur-scan.hook  integration.bash  integration.fish  integration.nu  integration.zsh
tests/fixtures/clean/legit-metadata/: PKGBUILD
tests/fixtures/malicious/launcher-shell/: PKGBUILD  launcher-shell.install
tests/fixtures/malicious/obfuscated-install/: PKGBUILD  htbrowser-bin-deps.install
tests/fixtures/malicious/supplychain-metadata/: PKGBUILD  postinstall.hook.sh
tests/fixtures/malicious/var-indirection/: PKGBUILD
