[workspace]
resolver = "2"
members = [
    "crates/aur-scanner-core",
    "crates/aur-scanner-cli",
    "crates/aur-scanner-hook",
    "crates/aur-scanner-plugin",
]

[workspace.package]
version = "1.1.0-rc2"
edition = "2021"
authors = ["Kief Studio <packages@kief.studio>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/KiefStudioMA/ks-aur-scanner"
homepage = "https://aur-scanner.kief.studio"
documentation = "https://aur-scanner.kief.studio"
readme = "README.md"
keywords = ["aur", "arch-linux", "security", "malware-detection", "pkgbuild"]
categories = ["command-line-utilities", "development-tools"]
description = "Security scanner for Arch Linux AUR packages"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Parsing and regex
regex = "1.11"
lazy_static = "1.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# HTTP client (for threat intel)
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }

# Dates
chrono = { version = "0.4", features = ["serde"] }

# Terminal output
colored = "2.1"

# Hashing
blake3 = "1.5"
sha2 = "0.10"

# Base64
base64 = "0.22"

# Low-level syscalls (privilege dropping in the root pacman hook)
libc = "0.2"

# Internal crates
aur-scanner-core = { version = "1.1.0-rc2", path = "crates/aur-scanner-core" }

[profile.release]
lto = true
codegen-units = 1
strip = true
