[package]
name = "aur-scanner-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories = ["development-tools", "parser-implementations"]
description = "Core library for AUR package security scanning - PKGBUILD parser, rule engine, and security analyzers"
readme = "../../README.md"

[dependencies]
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
regex.workspace = true
lazy_static.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
reqwest.workspace = true
blake3.workspace = true
sha2.workspace = true
base64.workspace = true

# For cache directory detection
dirs = "6.0"

# For temporary directories when fetching PKGBUILDs
tempfile = "3.14"

# For host-aware URL/IOC matching (parse the real host, not a naive substring).
# Already present in the lockfile transitively via reqwest; pinned as a direct dep.
url = "2.5"

# For ELF/binary analysis in the BinaryPayloadAnalyzer.
goblin = "0.10.7"

[dev-dependencies]
