[package]
name = "aur-scanner-plugin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "AUR helper plugin for security scanning - wrapper for yay/paru with automatic scanning"
readme = "../../README.md"

[lib]
name = "aur_scanner_plugin"
path = "src/lib.rs"

[[bin]]
name = "aur-scan-wrap"
path = "src/bin/wrapper.rs"

[dependencies]
aur-scanner-core.workspace = true
tokio.workspace = true
tracing.workspace = true
colored.workspace = true
anyhow.workspace = true

[dev-dependencies]
chrono.workspace = true
serde_json.workspace = true
